...
import 'package:climbmetrics/viewmodels/database/database_notifier.dart';
import 'package:climbmetrics/viewmodels/database/database_provider.dart';
import 'package:flutter/material.dart';
import 'package:flutter_riverpod/flutter_riverpod.dart';

class BoulderingWallListView extends ConsumerStatefulWidget {
  const BoulderingWallListView({super.key});

  @override
  ConsumerState<BoulderingWallListView> createState() => _BoulderingWallListViewState();
}

class _BoulderingWallListViewState extends ConsumerState<BoulderingWallListView> with RouteAware {
...
              child: Stack(
                children: [
                  
                  Align(
                    alignment: Alignment(0,-0.9),
                    child: Text(
                      key: Key('noBoulderingWallsText'),
                      'No Linked Bouldering Walls',
                      textAlign: TextAlign.center,
                      style: Theme.of(context).textTheme.bodyLarge
                    ),
                  ),
                  
...
              
              Align(
                alignment: Alignment(-0.85,0),
                child: SizedBox(
                  width: width / 1.25,
                  child: standardTextField(
                    key: Key('boulderingWallSearchTextField'),
                    controller: _nameController, 
                    errorText: localErrorText, 
                    labelText: 'Company Name'
                  )
                ),
              ),
        
              Align(
                alignment: Alignment(0.9,0),
                child: IconButton(
                  key: Key('searchButton'),
                  onPressed: () async {
                    String companyName = _nameController.text.trim();

                    setState(() {
                      _isSearchLoading = true;
                    });
...
        boulderingWallLinkList: boulderingWallLinkList, 
        boulderingWallLinkNotifier: boulderingWallLinkNotifier, 
        databaseNotifier: databaseNotifier, 
        boulderingWallLinkListNotifier: boulderingWallLinkListNotifier, 
        boulderingWallSearchNotifier: boulderingWallSearchNotifier
      ),
      bottomNavigationBar: PrimaryBottomNaviagtionBar(),
    );
  }
}



...
